# archimera

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
apps/edge/: .dev.vars.example  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.toml
apps/edge/src/: worker.ts
docs/: archimera-plan.html
docs/milestones/: M00-resolve-unknowns.md  M01-rust-scaffold.md  M02-polymarket-fetch.md  M03-anthropic-trace.md  M04-quarter-kelly.md  M05-rsa-oaep-entity-secret.md  M06-bootstrap-sca-wallet.md  M07-usdc-transfer-arc.md  M08-trace-pinning.md  M09-worker-auth.md  M10-frontend-receipt.md  M11-loom-submit.md  README.md
services/core/: .env.example  Cargo.toml
services/core/src/: lib.rs  main.rs
